--- a/resources/View/Pages/Home.html
+++ b/resources/View/Pages/Home.html
@@ -1,4 +1,4 @@
-<h1>Home Página</h1>
+<h1>Home {{name}}</h1> <!-- A interpolação "{{}}" é substituida pela minha variável declarada no array -->
 Olá mundo :)
 <hr>
-Olá mundo 2
+{{description}}
